feat(database): wip
